objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Member_Created_Date__c</fullName>
        <label>Admin Member Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agent_Code__c</fullName>
        <label>Agent Code</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Agent_ID__c</fullName>
        <label>Agent ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Label__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent Label</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Fee__c</fullName>
        <label>Application Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>Name of the County where the Contact is located</description>
        <inlineHelpText>Please enter the name of the County where the Contact is located</inlineHelpText>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent_ID__c</fullName>
        <label>Dependent ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_O_Expiration_Date__c</fullName>
        <formula>Account.E_O_Expiration_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>E&amp;O Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enroller_ID__c</fullName>
        <label>Enroller ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enroller_Name__c</fullName>
        <label>Enroller Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Gender</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HipaaShare__c</fullName>
        <label>HipaaShare</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Disclose my complete health record</fullName>
                </value>
                <value>
                    <fullName>Billing Records and Membership Records</fullName>
                </value>
                <value>
                    <fullName>Change/Update of Record</fullName>
                </value>
                <value>
                    <fullName>Mental Health Records</fullName>
                </value>
                <value>
                    <fullName>Alcohol/drug abuse treatment</fullName>
                </value>
                <value>
                    <fullName>Communicable diseases</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hold_Amount__c</fullName>
        <label>Hold Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hold_Date__c</fullName>
        <label>Hold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hold_Reason__c</fullName>
        <label>Hold Reason</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_ID__c</fullName>
        <label>Internal ID</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Language 2</fullName>
                    <isActive>false</isActive>
                    <label>Language 2</label>
                </value>
                <value>
                    <fullName>Language 3</fullName>
                    <isActive>false</isActive>
                    <label>Language 3</label>
                </value>
                <value>
                    <fullName>Language 4</fullName>
                    <isActive>false</isActive>
                    <label>Language 4</label>
                </value>
                <value>
                    <fullName>Language 5</fullName>
                    <isActive>false</isActive>
                    <label>Language 5</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Learning_Evaluation_Result__c</fullName>
        <label>Learning Evaluation Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Failed-Completed</fullName>
                </value>
                <value>
                    <fullName>Failed-Not Completed</fullName>
                </value>
                <value>
                    <fullName>Failed - Completed</fullName>
                    <isActive>false</isActive>
                    <label>Failed - Completed</label>
                </value>
                <value>
                    <fullName>Failed - Not Completed</fullName>
                    <isActive>false</isActive>
                    <label>Failed - Not Completed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <label>Member ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <label>Paid</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_ID__c</fullName>
        <label>Parent ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>List Bill</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_2__c</fullName>
        <label>Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Prospect_Lead__c</fullName>
        <label>Prospect/Lead</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <label>Referral</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refund_Comment__c</fullName>
        <label>Refund Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Refund_Provided_Date__c</fullName>
        <label>Refund Provided Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Refund_Provided__c</fullName>
        <label>Refund Provided</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refund_Requested_Date__c</fullName>
        <label>Refund Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Refund_Requested__c</fullName>
        <label>Refund Requested</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Adult Dependent</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Detail__c</fullName>
        <label>Source Detail</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <label>Student</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_ID__c</fullName>
        <label>System ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPV_Code__c</fullName>
        <label>TPV Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPV_Date__c</fullName>
        <label>TPV Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tobacco_Use__c</fullName>
        <label>Tobacco Use</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Pardot Scoring Categories. Indicates that new scores will soon be synced from Pardot for this contact.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this contact.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Pardot Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the search term.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether contact hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vfirst__Adjudication__c</fullName>
        <formula>IF(CONTAINS(vfirst__Site_Guest_Access_Helper__r.vfirst__Adjudication__c, &quot;Approved&quot;), 
IMAGE(&quot;https://salesforce.verifiedfirst.com/images/Approved.png&quot;, &quot;Approved&quot;, 14, 14),&apos;&apos;) 
+ 
IF(CONTAINS(vfirst__Site_Guest_Access_Helper__r.vfirst__Adjudication__c, &quot;Pending&quot;), 
IMAGE(&quot;https://salesforce.verifiedfirst.com/images/Pending.png&quot;, &quot;Pending&quot;, 14, 14),&apos;&apos;) 
+ 
IF(CONTAINS(vfirst__Site_Guest_Access_Helper__r.vfirst__Adjudication__c, &quot;Declined&quot;), 
IMAGE(&quot;https://salesforce.verifiedfirst.com/images/Declined.png&quot;, &quot;Declined&quot;, 14, 14),&apos;&apos;) 
+ 
IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Adjudication__c = &quot;-&quot;, 
&apos;To Be Determined&apos;, &apos; &apos; + vfirst__Site_Guest_Access_Helper__r.vfirst__Adjudication__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjudication</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vfirst__Initiate_Background_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initiate Background Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vfirst__Site_Guest_Access_Helper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Guest Access Helper</label>
        <referenceTo>vfirst__Site_Guest_Access_Helper__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vfirst__Stage__c</fullName>
        <formula>IF(vfirst__Site_Guest_Access_Helper__r.vfirst__File_Processing__c,
  &apos;File Processing...&apos;,
  IF(OR(OR(OR(OR(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;x:email&apos;, vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;ready_to_order&apos;), vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;x:app_pending&apos;), CONTAINS(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c, &apos;pre_pull&apos;)), CONTAINS(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c, &apos;waiting_applicant&apos;)), 
    IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Archived__c, 
      IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Archived_By__c == &apos;Applicant&apos;, 
        &apos;Refused Invitation&apos;, 
        &apos;Withdrawn&apos; 
      ), 
      IF(CONTAINS(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c, &apos;pre_pull&apos;), 
        &apos;Partially Ordered&apos;, 
        IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;ready_to_order&apos;,
          &apos;Ready to Order&apos;,
          IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Invite_Send_Error__c,
            &apos;Notification Email Bounced&apos;, 
            &apos;Waiting on Applicant&apos; 
          ) 
        ) 
      ) 
    ), 
    IF(OR(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;x:pending&apos;, CONTAINS(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c, &apos;partial&apos;)), 
      &apos;Partially Complete&apos;, 
      IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;applicant_declined&apos;, 
        &apos;Applicant Declined&apos;, 
        IF(OR(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;x:ready&apos;, vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;complete&apos;), 
          &apos;Complete&apos;, 
          IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;canceled&apos;, 
            &apos;Canceled&apos;, 
            IF(OR(OR(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;x:email&apos;, vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;waiting_applicant-invitation_email&apos;), vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;waiting_applicant-invitation_sms&apos;), 
              &apos;Invitation Sent&apos;, 
              IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;complete-need_review&apos;, 
                &apos;Complete - In Need of Review&apos;, 
                IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;complete-approved&apos;, 
                  &apos;Complete - Approved&apos;, 
                  IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;complete-completed&apos;, 
                  &apos;Complete - Completed&apos;, 
                    IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;complete-preadverse&apos;, 
                    &apos;Complete - Pre-Adverse Action&apos;, 
                      IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;complete-adverse&apos;, 
                        &apos;Complete - Adverse Action&apos;, 
                        IF(ISBLANK(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c), 
                          &apos;&apos;, 
                          &apos;File Processing...&apos; 
                        ) 
                      ) 
                    ) 
                  ) 
                ) 
              ) 
            ) 
          ) 
        ) 
      ) 
    ) 
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vfirst__Verification_Report_m__c</fullName>
        <formula>IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;x:ready&apos;, 

	IF( CONTAINS($Api.Partner_Server_URL_300, &apos;.my.&apos;),
	HYPERLINK(SUBSTITUTE ( SUBSTITUTE ( LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300)), &apos;https://vfirst.&apos;, &apos;https://&apos;), &apos;.visual.&apos;, &apos;.sales&apos;) + &apos;apex/vfirst__PdfTemplate?objectId=&apos; + Id, IMAGE(&apos;https://salesforce.verifiedfirst.com/images/report%2Bactive.png&apos;, &apos;Ready &apos;,16,16))
	,
	HYPERLINK(SUBSTITUTE ( SUBSTITUTE ( LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300)), &apos;https://&apos;, &apos;https://vfirst.&apos;), &apos;.sales&apos;, &apos;.visual.&apos;) + &apos;apex/vfirst__PdfTemplate?objectId=&apos; + Id, IMAGE(&apos;https://salesforce.verifiedfirst.com/images/report%2Bactive.png&apos;, &apos;Ready &apos;,16,16))
	)
,

	IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;x:partial&apos;,

	IF( CONTAINS($Api.Partner_Server_URL_300, &apos;.my.&apos;),
	HYPERLINK(SUBSTITUTE ( SUBSTITUTE ( LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300)), &apos;https://vfirst.&apos;, &apos;https://&apos;), &apos;.visual.&apos;, &apos;.sales&apos;) + &apos;apex/vfirst__PdfTemplate?objectId=&apos; + Id, IMAGE(&apos;https://salesforce.verifiedfirst.com/images/report%2Byellow.png&apos;, &apos;Partially &apos;,16,16))
	,
	HYPERLINK(SUBSTITUTE ( SUBSTITUTE ( LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300)), &apos;https://&apos;, &apos;https://vfirst.&apos;), &apos;.sales&apos;, &apos;.visual.&apos;) + &apos;apex/vfirst__PdfTemplate?objectId=&apos; + Id, IMAGE(&apos;https://salesforce.verifiedfirst.com/images/report%2Byellow.png&apos;, &apos;Partially &apos;,16,16))
	) 
	,
	IMAGE(&apos;https://salesforce.verifiedfirst.com/images/report%2Binactive.png&apos;, &apos;Not Ready &apos;,16,16))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Verification Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vfirst__of_Background_Checks_Ordered__c</fullName>
        <formula>vfirst__Site_Guest_Access_Helper__r.vfirst__of_Background_Checks_Ordered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Background Checks Ordered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Age__c</fullName>
        <formula>IF(MONTH(TODAY())&gt;MONTH(Birthdate),YEAR(TODAY())-YEAR(Birthdate),IF(AND(MONTH(TODAY())=MONTH(Birthdate),DAY(TODAY())&gt;=DAY(Birthdate)),YEAR(TODAY())-YEAR(Birthdate),(YEAR(TODAY())-YEAR(Birthdate))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AnnualCommission__c</fullName>
        <label>Annual Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AnnualIncome__c</fullName>
        <description>Contact&apos;s Annual Income</description>
        <label>Annual Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AnnualPremium__c</fullName>
        <label>Annual Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CAQHIdentifier__c</fullName>
        <externalId>true</externalId>
        <label>CAQHIdentifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CustomerSentiment__c</fullName>
        <description>Latest guess at this person&apos;s sentiment towards the deploying company with values such as Promoter, Satisfied, Neutral, Dissastisfied, Disgruntled.</description>
        <label>Customer Sentiment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Promoter</fullName>
                </value>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Disgruntled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__DaysSinceLastContact__c</fullName>
        <formula>IF( (TODAY() - vlocity_ins__LastContactbyRecordOwner__c)&gt;0, (TODAY() - vlocity_ins__LastContactbyRecordOwner__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DriversLicenseNumber__c</fullName>
        <description>The individual&apos;s driver&apos;s license number useful for credit checks.</description>
        <label>Driver&apos;s License Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EmploymentStatus__c</fullName>
        <label>Employment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employed Full-Time</fullName>
                </value>
                <value>
                    <fullName>Employed Part-Time</fullName>
                </value>
                <value>
                    <fullName>Self-Employed</fullName>
                </value>
                <value>
                    <fullName>Unemployed</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Has24x7Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean indicating whether an individual Provider offers 24x7 support</description>
        <label>24x7 Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Image__c</fullName>
        <description>A rich text area field that stores an image of this person. The image must be a .gif, .jpg or .png file and is limited to 1 MB in size. For more information about images stored in rich text area fields, see Editing Rich Text Are Fields in Records (https://help.salesforce.com/articleView?id=fields_using_rich_text_area.htm&amp;type=5).</description>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean indicating whether the Contact is active or inactive without depending on the specific contact status. Vlocity logic determines whether this Contact should be considered active or inactive using this field. Typically inactive means the Contact will be filtered out of views and lists.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsEmployee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsPartner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag indicates if the contact is a partner</description>
        <label>Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsPersonAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Person Account</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>